# docstringinator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRE_COMMIT_SETUP.md  README.md  docstringinator.yaml  multi_line_test.py  pyproject.toml  run_docstringinator.py  run_docstringinator_files.py  run_docstringinator_precommit.py
docstringinator/: __init__.py  __main__.py  cli.py  config.py  core.py  exceptions.py  models.py  parser.py
docstringinator/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py  utils.py
examples/: example_usage.py  ollama_config.yaml
tests/: __init__.py  test_core.py  test_ollama.py  test_parser.py
